[metadata]
name = Retcon
description = Retcon
version = 0.0.0
long_description = file: README.md
long_description_content_type = text/markdown
author = Roger Aiudi
author_email = roger.aiudi@prattwhitney.com
url = https://github.com/aiudirog/Retcon

[options]
python_requires = >=3.6.2
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
